# recipe-app-api

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: checks.yaml  checks.yml
core/: admin.py  models.py
core/management/commands/: wait_for_db.py
core/migrations/: 0001_initial.py  0002_recipe.py  0003_tag_recipe_tags.py  0004_ingredient_recipe_ingredients.py  0005_recipe_image.py
core/tests/: test_admin.py  test_commands.py  test_models.py
recipe/: serializers.py  views.py
recipe/tests/: test_ingredients_api.py  test_recipe_api.py  test_tags_api.py
recipeApp/: settings.py  urls.py
user/: serializers.py  urls.py  views.py
user/tests/: test_user_api.py
