[tool.poetry]
name = "recipe-app-api"
version = "0.1.0"
description = "This is a recipe app api using django rest framework"
authors = ["nidhi-2619 <91557785+nidhi-2619@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2= "^2.9.7"
Django = "^4.2.5"
djangorestframework = "^3.14.0"
flake8 = "^6.1.0"
pre-commit = "^3.4.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
